# 2024-python-bootstrap

./: .gitignore  README.md  hello-world.py  pyproject.toml
src/: eda-with-pandas.py  hello_world.py  house.py  list_comprehension.py  loc.py  maze.py  string_manipulations.py  titanic-randomforrest.py  titanic.py  traverse-a-folder.py  under-over-fitting.py
tests/: test_hello_world.py
