[tool.poetry]
name = "2024-python-bootstrap"
version = "0.1.0"
description = ""
authors = ["kaunjovi <kaunjovi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
